@@ -5,11 +5,11 @@ import java.util.List;
 
 public class MenorNumero {
     static List<Integer> numeros = List.of(-1, 3, 4, 2, 6);
-    static Integer menorNumero = numeros.get(0);
+    static Integer menorNumero = numeros.getFirst();
     static void main() {
-        for (int i = 0; i < numeros.size(); i++) {
-            if (numeros.get(i) < menorNumero) {
-                menorNumero = numeros.get(i);
+        for (Integer numero : numeros) {
+            if (numero < menorNumero) {
+                menorNumero = numero;
             }
         }
         System.out.println("Menor numero e: " + menorNumero);
